--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -168,6 +168,8 @@ p {
   // padding-bottom: 100px;
   margin-left: 10px;
   margin-bottom: 20px;
+  // margin-top: 100px;
+  // padding-top: 100px;
   // border-bottom: 100px;
   border: 5px  #fff;
   box-shadow: 10px 10px 5px #888888;
@@ -249,15 +251,20 @@ p {
       font-family: 'Patrick Hand';
       font-size: 26px;
 }
-
+// .list-left{
+//   width: 50%;
+//   margin: 0px;
+// }
 .quote1 {
   font-family: 'Patrick Hand';
   font-size: 40px;
-    float: right;
-      width: 300px;
-      margin-right: 100px;
-      text-align: center;
-        color: #65a7b7;
+  float: right;
+  width: 300px;
+  margin-right: 100px;
+  text-align: center;
+  color: #65a7b7;
+  padding-bottom: 100px;
+  // margin-bottom: 100px;
 }
 
 .quote2 {
