--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -12,7 +12,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Acupuntura<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to 'Acupuntura Tradicional', page_path('acupuntura_gen') %></li>
-            <li><%= link_to 'Acupuntura Estética Facial?', page_path('acupuntura_est') %></li>
+            <li><%= link_to 'Acupuntura Estética Facial', page_path('acupuntura_est') %></li>
           </ul>
         </li>
 
