--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,8 +7,8 @@
 <p>El modelo de la Medicina Funcional tiene un enfoque
 individualizado y científico que permite a los pacientes y
 terapeutas trabajar juntos para identificar las causas
-subyacentes de las desordenes y enfermedades para promocionar
-un optimo bienestar. Requiere un entendimiento detallado de
+subyacentes de las desórdenes y enfermedades para promocionar
+un óptimo bienestar. Requiere un entendimiento detallado de
 la genética, bioquímica, y factores de estilo de vida de cada
 individuo y estudia estos datos para movilizar planes de
 tratamiento personalizados que conducen a resultados óptimos.</p>
@@ -17,13 +17,13 @@ tratamiento personalizados que conducen a resultados óptimos.</p>
 </div><br><br>
 
 <p>A diferencia de la medicina convencional, La medicina funcional
-se centra en las raíces de los desordenes y en los factores
+se centra en las raíces de los desórdenes y en los factores
 subyacentes que influyen en la salud. Su enfoque es científico
 y a la vez holístico, considerando elementos de mente/cuerpo,
 factores genéticos e impactos medioambientales como la dieta,
 estilo de vida y ejercicio.</p>
 <br>
-<div class='quote3'> El ENFOQUE DE LA MEDICINA CONVENCIONAL ES EN LAS HOJAS Y RAMAS DEL ÁRBOL (MANIFESTACIONES DE ENFERMEDAD), LA MEDICINA FUNCIONAL PONE ENFASIS EN LAS CAUSAS/RAICES (LOS FACTORES SUBYACENTES QUE CONDUCEN A LA MANIFESTACIÓN DE LA ENFERMEDAD)
+<div class='quote3'> El ENFOQUE DE LA MEDICINA CONVENCIONAL ES EN LAS HOJAS Y RAMAS DEL ÁRBOL (MANIFESTACIONES DE ENFERMEDAD), LA MEDICINA FUNCIONAL PONE ÉNFASIS EN LAS CAUSAS/RAÍCES (LOS FACTORES SUBYACENTES QUE CONDUCEN A LA MANIFESTACIÓN DE LA ENFERMEDAD)
 </div><br><br>
 <%= image_tag("Arbol-IFM.jpg", class:"tree") %>
 
