--- a/app/views/pages/acupuntura_est.html.erb
+++ b/app/views/pages/acupuntura_est.html.erb
@@ -38,3 +38,6 @@
   of Clinical Acupuncture” informó que entre los 300 casos tratados
   con acupuntura facial y la acupuntura cosmética, 90% tienen resultados
   evidentes después de sólo un tratamiento.</p>
+
+  <p>Para mas información sobr acerca de la acupuntura tradicional y acupuntura
+  estética facial, visite <%= link_to 'Acupuntura Simon Verde', 'http://www.acupunturasimonverde.com', :target => "_blank" %></p>
