--- a/app/views/pages/acupuntura_gen.html.erb
+++ b/app/views/pages/acupuntura_gen.html.erb
@@ -11,7 +11,7 @@ enfoque macroscópico de la salud y sus desórdenes, el diagnóstico
 según la MTC se basa en observar a la persona globalmente, en todo
 su contexto, ya que se considera que ningún fenómeno puede ser
 evaluado de forma aislada. Al contrario que en la medicina convencional,
-lo que se pretende es tratar más a la persona que a la enfermedad.</p>
+lo que se pretende es tratar más a la persona que a las desórdenes.</p>
 
 
 <br><br>
@@ -83,3 +83,6 @@ de tipo muscular e articular, ya sean de carácter agudo o crónico</b>. Tambié
 tiene buenos resultados con ciertas condiciones como el insomnio, la
 osteoartritis, la infertilidad femenina, la obesidad y las
 alergias.</p>
+
+<p>Para mas información sobr acerca de la acupuntura tradicional y acupuntura
+estética facial, visite <%= link_to 'Acupuntura Simon Verde', 'http://www.acupunturasimonverde.com', :target => "_blank" %></p>
