--- a/app/views/pages/consulta.html.erb
+++ b/app/views/pages/consulta.html.erb
@@ -8,7 +8,7 @@ mejorar tu salud. Es educacional, motivacional y personalizado.</p>
 salud, la complejidad del caso, y depende de la motivación
 personal para implementar cambios en la dieta y estilo de
 vida. La terapia nutricional no es un remedio ‘milagroso’.
-Se trata de trabajar juntos par encontrar las raíces del
+Se trata de trabajar juntos para encontrar las raíces del
 problema y corregirlo con la dieta y estilo de vida.
 Dependiendo de tus objetivos de salud, este proceso puede
 durar hasta 2 o 3 meses pero proporcionará las herramientas
@@ -68,15 +68,14 @@ terapeuta evaluará tus planes nutricionales, tus metas y
 estrategias y actualizará tu programa. Las consultas de
 seguimiento te proporcionarán la oportunidad de valorar los
 diferentes aspectos de tu salud y bienestar.</p>
-r>
+
 <p>En el caso que la persona tenga dificultad siguiendo la dieta
 y los cambios en el estilo de vida, en las sesiones de
 seguimiento se le prestará mas atención al elemento de
-coaching nutricional y de salud, según Técnicas de
+coaching nutricional y de salud, según técnicas de
 programación lingüística y neuroplasticidad.</p>
 
 <h2>Precios</h2>
 
-<p>Primera consulta 60e, Consultas de seguimiento 40e</p
-  >
+<p>Primera Consulta 60e, Consultas de Seguimiento 40e</p>
 <%= link_to 'Rellenar Cuestionario', new_formulario_path, class:"btn btn-info btn-lg" %>
