--- a/app/views/pages/consulta_est.html.erb
+++ b/app/views/pages/consulta_est.html.erb
@@ -96,8 +96,9 @@ y finas, más finas que un cabello y apenas se notan durante su inserción </p>
   cuello antes de iniciar el tratamiento. </b><br>
 <br>
 <b>Se puede recibir acupuntura aunque este tomando medicamentos.</b> <br>
-<br><b>Se recomienda esperar un periodo de dos meses antes de recibir
-  acupuntura después de acudir a métodos como el bótox, rellenos,
+<br><b>Se recomienda esperar un periodo de dos meses antes de
+  recibir acupuntura estética después de acudir a métodos como
+  el bótox, rellenos,
   peelings químicos, cirugía...</b> <br><br>
 
 <h2>Contraindicaciones</h2><br>
