--- a/app/views/pages/precios.html.erb
+++ b/app/views/pages/precios.html.erb
@@ -7,17 +7,17 @@
 <h2>Terapia Nutricional</h2>
 
 <p>Primera Consulta ................... 60euros   (Duración 1h30)</p>
-<p>Consultas de seguimiento...... 40euros   (Duración 1h)</p>
+<p>Consultas de Seguimiento...... 40euros   (Duración 1h)</p>
 
 <h2>Acupuntura</h2>
 
 <p>Primera Consulta .................... 40euros    (Duración 1h15)</p>
-<p>Consultas de seguimiento ...... 35euros    (Duración 1h)</p>
+<p>Consultas de Seguimiento ...... 35euros    (Duración 1h)</p>
 
 <h2>Combinación de Nutrición y Acupuntura</h2>
 
 <p>Primera Consulta..................... 80euros   (Duración 2h)</p>
-<p>Consultas de seguimiento....... 60euros   (Duración 1h30)</p>
+<p>Consultas de Seguimiento....... 60euros   (Duración 1h30)</p>
 
 <h2>Acupuntura Estética</h2>
 <p>...................................................... 40euros    (Duración 1h15)</p>
