--- a/app/views/pages/sobre.html.erb
+++ b/app/views/pages/sobre.html.erb
@@ -18,7 +18,7 @@ tratar dolores músculo-esqueléticos.</p>
 
 <p>
 Esto me llevó a ampliar mis conocimientos terapéuticos estudiando
- Acupuntura y Medicina tradicional china. Me gradué en MTC y
+ Acupuntura y Medicina Tradicional China. Me gradué en MTC y
   Acupuntura tanto aquí en España, como en Irlanda.</p>
 <p>
 Posteriormente, he realizado un Masters en Nutrición Personalizada
