--- a/app/views/pages/terapia_nut.html.erb
+++ b/app/views/pages/terapia_nut.html.erb
@@ -1,27 +1,28 @@
 
 <h1>Terapia Nutricional</h1>
-<%= image_tag 'nutricion.jpg', class:"nutricion3" %>
+<br>
 
-<p>La terapia nutricional, una pieza clave de la medicina funcional,
+<p>La terapia nutricional, una pieza clave de la medicina funcional, <%= image_tag 'nutricion.jpg', class:"nutricion3" %>
 es el arte y ciencia de la utilización de alimentos, nutrientes y
 cambios en el estilo de vida para promover la salud y óptimo
-rendimiento.
+
+rendimiento.</p>
 
 <p>Para muchas personas, comer de forma sana es cada vez mas difícil
 sobre todo cuando recibimos tanta información contradictoria de
-los medios de comunicación.
+los medios de comunicación.</p>
 
 <p>La terapia nutricional tiene como meta ayudarte a entender como
 tu organismo actua con los alimentos que tomas. Te proporcionará
 con los conocimientos y herramientas para permitirte entender la
-mejor forma de comer para ti, como individuo.
-
-<p><ul>
+mejor forma de comer para ti, como individuo.</p>
+<br>
+  <ul>
   <li><p>Control de peso</li>
+
   <li><p>Enfermedades Crónicas</li>
+        <div class='quote1'>La nutrición es la medicina mas poderosa que existe</div>
   <li><p>Análisis de Dieta</li>
   <li><p>Nutrición Deportiva</li>
   <li><p>Coaching Nutricional/Salud</li>
 </ul>
-
-<div class='quote1'>La nutrición es la medicina mas poderosa que existe</div>
