--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -13,7 +13,7 @@
 
 <br><br>
 <!-- <%= link_to (image_tag 'functional-med.png', class:"nutricion"), 'https://www.ifm.org/' %> -->
-<%= link_to image_tag('functional-med.png', class:"nutricion"), 'https://www.ifm.org/' %>
+<%= link_to image_tag('functional-med.png', class:"nutricion"), 'www.ifm.org/' %>
 
 <!-- <%= link_to 'https://www.ifm.org/' do %>
   <%= image_tag 'functional-med.png', class:"nutricion" %>
