--- a/app/views/pages/consulta_acu.html.erb
+++ b/app/views/pages/consulta_acu.html.erb
@@ -12,12 +12,12 @@ conocer cualquier condición subyacente actual o pasada ya sea de
 <p>
 •	Historia clínica detallada<br>
 •	Observación, toma de pulsos y palpación de los meridianos.<br>
-•	Diagnóstico clínico de la condición/desorden</p>
+•	Diagnóstico clínico de la condición/desórden</p>
 
 <h2>Precios</h2>
 
 <p>Las sesiones necesarias dependen del individuo y del estado de la
-desorden a tratar, no obstante, para la gran mayoría de condiciones
+desórden a tratar, no obstante, para la gran mayoría de condiciones
 y lesiones se suele notar una mejora o alivio de las síntomas tras
 una sesión, sobre todo a nivel de dolor ya que uno de los mecanismos
 del funcionamiento de la acupuntura es a través de sus propiedades
