--- a/app/views/pages/consulta_est.html.erb
+++ b/app/views/pages/consulta_est.html.erb
@@ -1,4 +1,4 @@
-<h1>El tratamiento engloba varias fases</h1><br>
+<h1>El tratamiento</h1><br>
 
 
 <p>• <span class=brown_text>Varias agujas muy finas son insertadas</span>. Algunas en zonas distales y
@@ -11,14 +11,14 @@ es muy suave pero profundamente relajante.</p><br>
 <p>• <span class=brown_text>Las agujas permanecen insertadas por un periodo de aproximadamente 30
 minutos</span> mientras que el paciente puede relajarse y disfrutar de la terapia.</p><br>
 
-<p>• <span class=brown_text>Se retiran las agujas y se aplica un sérum de ácido hialurónico.</span>
-Se aplican rodillos de jade y piedras de gua sha que complementan
-el proceso previo, facilitando la circulación de la sangre en la zona.</p> <br>
+<p>• <span class=brown_text>Se retiran las agujas y se aplica un sérum,
+   rodillos de jade y piedras de gua sha que complementan el proceso
+   previo, facilitando la circulación de la sangre en la zona.</p> <br>
 
-<p>• <span class=brown_text>Para finalizar se aplica una loción pro colágeno</span> y se da un masaje
-facial que tiene como fin estimular aún más la  producción de colágeno,
-elastina y ácido hialurónico natural y promover el drenaje linfático de
-la zona del rostro hacia abajo.</p>
+<p>• <span class=brown_text>Para finalizar se aplica una loción y se
+   da un masaje facial que tiene como fin estimular aún más la
+    producción de colágeno, elastina y ácido hialurónico natural
+    y promover el drenaje linfático de la zona del rostro.</p>
 
 <h2>¿Cuántas Sesiones son Necesarias?</h2><br>
 
