--- a/app/views/pages/sobre.html.erb
+++ b/app/views/pages/sobre.html.erb
@@ -25,4 +25,10 @@ Posteriormente, he realizado un Masters en Nutrición Personalizada
 por CNELM (Universidad de Middlesex, Londres), referente a nivel
  mundial en Nutrición Clínica y Terapia Nutricional, y afiliada
  al Instituto de Medicina Funcional.</p>
+
+<p>Soy miembro del ‘Institute of Functional Medicine’, ‘BANT’
+ (Asociación de Terapeutas Nutricionales de Gran Bretaña),
+ y ‘The Royal Society of Medicine’.  Actualmente, sigo asistiendo a seminarios de Nutrición
+Clínica y Medicina Funcional para poder estar al día de
+los estudios científicos mas recientes.</p>
 <br><br>
