--- a/app/views/pages/acupuntura_gen.html.erb
+++ b/app/views/pages/acupuntura_gen.html.erb
@@ -11,7 +11,7 @@ enfoque macroscópico de la salud y sus desórdenes, el diagnóstico
 según la MTC se basa en observar a la persona globalmente, en todo
 su contexto, ya que se considera que ningún fenómeno puede ser
 evaluado de forma aislada. Al contrario que en la medicina convencional,
-lo que se pretende es tratar más a la persona que a las desórdenes.</p>
+lo que se pretende es tratar más a la persona que a las enfermedades.</p>
 
 
 <br><br>
