--- a/app/views/pages/terapia_nut.html.erb
+++ b/app/views/pages/terapia_nut.html.erb
@@ -1,12 +1,13 @@
 
 <h1>Terapia Nutricional</h1>
 <br>
-
-<p>La terapia nutricional, una pieza clave de la medicina funcional, <%= image_tag 'nutricion.jpg', class:"nutricion3" %>
+<%= image_tag 'nutricion.jpg', class:"nutricion3" %>
+<p>La terapia nutricional, una pieza clave de la medicina funcional,
 es el arte y ciencia de la utilización de alimentos, nutrientes y
 cambios en el estilo de vida para promover la salud y óptimo
-
 rendimiento.</p>
+
+  <div class='quote1'>La nutrición es la medicina mas poderosa que existe</div>
 
 <p>Para muchas personas, comer de forma sana es cada vez mas difícil
 sobre todo cuando recibimos tanta información contradictoria de
@@ -21,7 +22,7 @@ mejor forma de comer para ti, como individuo.</p>
   <li><p>Control de peso</li>
 
   <li><p>Enfermedades Crónicas</li>
-        <div class='quote1'>La nutrición es la medicina mas poderosa que existe</div>
+
   <li><p>Análisis de Dieta</li>
   <li><p>Nutrición Deportiva</li>
   <li><p>Coaching Nutricional/Salud</li>
