--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -29,8 +29,8 @@ main {
   // background:rgba(199,199,199,1);
   // margin-top: 51px;
   margin-top: 0px;
-  padding-left: 15%;
-  padding-right: 15%;
+  padding-left: 10%;
+  padding-right: 10%;
   border-top: 200px;
 }
 
@@ -142,13 +142,14 @@ p {
 .nutricion {
   float: left;
   // padding-bottom: 100px;
-  margin-left: 100px;
+  margin-left: 0 auto;
   // border-bottom: 100px;
   border: 5px  #fff;
   box-shadow: 10px 10px 5px #888888;
   // border-radius: 5%;
   height: 30%;
     width: 30%;
+    min-width: 200px;
 }
 
 .nutricion2 {
@@ -161,6 +162,7 @@ p {
   // border-radius: 5%;
   height: 45%;
     width: 45%;
+    min-width: 200px;
 }
 // medicina funcional pic
 .nutricion3 {
@@ -176,6 +178,7 @@ p {
   border-radius: 5%;
   height: 45%;
     width: 45%;
+    min-width: 200px;
 }
 
 
@@ -234,10 +237,11 @@ p {
 .carousel-inner {
   width: 50%;
   float: right;
-  margin-top: 150px;
+  margin-top: 100px;
   margin-left: 30px;
-  margin-bottom: 100px;
+  margin-bottom: 10%;
   box-shadow: 10px 10px 5px #888888;
+  min-width: 200px;
 }
 
 .quote {
