--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -132,6 +132,9 @@ p {
   // font-family: 'Crimson Text', serif;
   font-size: 20px;
   color: grey;
+  min-width: 270px;
+  // margin: 0 auto;
+  text-align: justify;
 }
 
 .great-vibes {
