--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,6 +18,62 @@ background: linear-gradient(to right, rgba(185,185,185,1), rgba(197,197,197,1), 
   // background: linear-gradient(blue, pink);
   // background:rgba(0,0,0,0);
 }
+//
+// @media (min-width: 1200px){
+// .container, main {
+//     width: 1170px;
+// }
+// }
+// @media (min-width: 768px) and (max-width: 1200px) {
+//    .navbar-collapse.collapse {
+//        display: none !important;
+//    }
+// }
+
+// @media (min-width: 1200px) {
+//   /* line 193, C:/RailsInstaller/Ruby2.2.0/lib/ruby/gems/2.2.0/gems/bootstrap-sass-3.3.7/assets/stylesheets/bootstrap/_navbar.scss */
+//   .navbar-toggle {
+//     display: none;
+//   }
+// }
+
+@media (max-width: 1200px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
+}
+
 
 main {
   background-image:image-url('gotita-flip2.png');
@@ -34,7 +90,11 @@ main {
   border-top: 200px;
 }
 
-
+// .container, main {
+//
+//     padding-left: 0;
+//     padding-right: 0;
+//   }
 
 .navbar {
  margin-bottom: 50px;
