1 more translation estas seguro?

--- a/app/views/formularios/index.html.erb
+++ b/app/views/formularios/index.html.erb
@@ -43,7 +43,7 @@
 
         <td><%= link_to 'Show', formulario %></td>
         <td><%= link_to 'Edit', edit_formulario_path(formulario) %></td>
-        <td><%= link_to 'Destroy', formulario, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', formulario, method: :delete, data: { confirm: '¿Estás seguro?' } %></td>
       </tr>
     <% end %>
   </tbody>
