--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,11 +3,11 @@
 <%= render :partial => "layouts/carousel" %>
 
 <h1 class="home-title"><b>Servicios de Nutrición Clínica y Terapia Nutricional,
-   de Acupuntura Tradicional y Acupuntura Estética Facial</b></h1>
+   de Acupuntura Tradicional y Acupuntura Estética Facial</b><h2 class="home-subtitle" style="text-align: center"> en la tienda ecológica-
 
-  <h2 class="home-subtitle" style="text-align: center"> en la tienda ecológica-
+    Eslaveco del Polígono Pisa</h2></h1>
 
-   Eslaveco del Polígono Pisa</h2>
+
    <br>
 <br><br><br><br>
 
