changes to css for various screen sizes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -107,6 +107,13 @@ main {
 //     padding-left: 0;
 //     padding-right: 0;
 //   }
+//DROPDOWN MENU 2 below are to prevent drop down menu cutting off in iphone view
+.container > .navbar-header, main > .navbar-header, .container > .navbar-collapse, main > .navbar-collapse, .container-fluid > .navbar-header, .container-fluid > .navbar-collapse {
+  margin-left: 0;
+  padding-left: 20px;
+}
+
+
 
 .navbar {
  margin-bottom: 50px;
@@ -140,6 +147,11 @@ main {
   }
 }
 
+@media (min-width: 768px){
+.navbar-inverse .navbar-nav > li > a {
+    font-size: 15px;
+  }
+}
 .dropdown-menu > li > a {
   color: #65a7b7;
   font-family: 'Tillana', cursive;
@@ -205,7 +217,7 @@ p {
   // font-family: 'Crimson Text', serif;
   font-size: 20px;
   color: grey;
-  min-width: 300px;
+min-width: 270px;
   // margin: 0 auto;
   text-align: justify;
 }
@@ -225,7 +237,7 @@ p {
   // border-radius: 5%;
   height: 30%;
     width: 30%;
-    min-width: 300px;
+    min-width: auto;
 }
 
 .nutricion2 {
@@ -240,11 +252,14 @@ p {
     width: 45%;
     min-width: 300px;
 }
-// medicina funcional pic
+// medicina funcional pic & neil pic
+
+
 .nutricion3 {
   float: right;
   // padding-bottom: 100px;
-  margin-left: 10px;
+  margin-left: 15px;
+  padding-left: 10px;
   margin-bottom: 20px;
   // margin-top: 100px;
   // padding-top: 100px;
@@ -254,10 +269,44 @@ p {
   border-radius: 5%;
   height: 45%;
     width: 45%;
-    min-width: 300px;
+    min-width: 260px;
 }
+//for bigger phones
+@media (max-width: 415px) {
+    .nutricion3 {
 
+      float: left;
+        // padding-left: 0px;
+        // margin: 22px;
+        margin-left: 5px;
+        padding: 0px;
+        margin-bottom: 20px;
+        min-width: 310px;
+    }
+  }
+//for i phones 5-8
+  @media (max-width: 400px) {
+      .nutricion3 {
 
+        float: left;
+          // padding-left: 0px;
+          margin: 1px;
+          margin-bottom: 20px;
+          padding: 0;
+      }
+    }
+//iphone 5
+    @media (max-width: 320px) {
+        .nutricion3 {
+
+          float: left;
+            // padding-left: 0px;
+            margin: 0px;
+            margin-bottom: 20px;
+            padding: 0;
+            min-width: 270px;
+        }
+      }
 .style_image6 {
   border: 5px double #3A6028;
   box-shadow: 10px 10px 5px #888888;
@@ -379,7 +428,7 @@ p {
   border-radius: 5%;
   height: 80%;
     width: 80%;
-    min-width: 300px;
+    min-width: 260px;
 }
 
 .tree-quote {
