add bullets css

--- a/app/views/pages/acupuntura_est.html.erb
+++ b/app/views/pages/acupuntura_est.html.erb
@@ -15,7 +15,7 @@
 
 <%= image_tag("face_points.jpg", :class => "style_image4") %>
 
-  <h2>Beneficios</h2><br>
+  <h2 class="bullets">Beneficios</h2><br>
 <p>
   •	Reduce las líneas finas de expresión y arrugas<br>
   •	Se disminuyen los poros abiertos<br>
