--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -121,11 +121,11 @@ main {
 }
 
 .navbar-inverse {
-  // background-color: #5bc0de;
-  background-color: transparent;
-  // background: linear-gradient(to right, blue, pink);
-  border-color: transparent;
-  // #0067af
+    // background-color: #5bc0de;
+    background-color: transparent;
+    // background: linear-gradient(to right, blue, pink);
+    border-color: transparent;
+    // #0067af
     position: absolute;
     right: 0;
     left: 0;
@@ -153,8 +153,8 @@ main {
   }
 }
 .dropdown-menu > li > a {
-  color: #65a7b7;
-  font-family: 'Tillana', cursive;
+    color: #65a7b7;
+    font-family: 'Tillana', cursive;
     display: block;
     padding: 3px 20px;
     clear: both;
@@ -186,8 +186,9 @@ h1 {
   font-family: 'Tillana', cursive;
   // color: #5bc0de;
   color: #a3aebd;
-  margin-top: 170px;
+  // margin-top: 170px;
   text-align: center;
+  // max-width: 280px;
 }
 
 .home-subtitle {
@@ -197,6 +198,16 @@ h1 {
   color: #65a7b7;
   // margin-top: 130px;
     text-align: center;
+    // max-width: 300px;
+}
+
+@media (max-width:1000px){
+  .home-subtitle {
+    max-width: 300px;
+  }
+  .home-title {
+  max-width: 280px;
+  }
 }
 
 h2 {
@@ -217,7 +228,7 @@ p {
   // font-family: 'Crimson Text', serif;
   font-size: 20px;
   color: grey;
-min-width: 270px;
+  min-width: 270px;
   // margin: 0 auto;
   text-align: justify;
 }
@@ -252,9 +263,8 @@ min-width: 270px;
     width: 45%;
     min-width: 300px;
 }
+
 // medicina funcional pic & neil pic
-
-
 .nutricion3 {
   float: right;
   // padding-bottom: 100px;
@@ -296,7 +306,7 @@ min-width: 270px;
       }
     }
 //iphone 5
-    @media (max-width: 320px) {
+    @media (max-width: 321px) {
         .nutricion3 {
 
           float: left;
@@ -396,7 +406,12 @@ min-width: 270px;
   padding-bottom: 20px;
   // margin-bottom: 100px;
 }
-
+@media (min-width: 620px) and (max-width:1000px){
+  .quote1 {
+    width: 300px;
+    margin-left: 20px;
+  }
+}
 .quote2 {
   font-family: 'Patrick Hand';
   font-size: 34px;
@@ -447,3 +462,13 @@ min-width: 270px;
 .navbar-collapse.in {
   background-color: white
 }
+
+@media (min-width: 629px) and (max-width: 947px){
+.bullets {
+    text-align: left;
+    margin-top: 440px;
+  }
+  .style_image4 {
+        float: left;
+    }
+  }
